--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cube-ui": "^1.12.5",
+    "express": "^4.16.4",
+    "font-awesome": "^4.7.0",
+    "mysql": "^2.16.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
