--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql": "^2.16.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
