--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cube-ui": "^1.12.5",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "lib-flexible": "^0.3.2",
     "mysql": "^2.16.0",
+    "postcss-px2rem-exclude": "0.0.6",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
     "vue-lazyload": "^1.2.6",
@@ -30,6 +32,16 @@
     "eslint-plugin-vue": "^5.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "postcss-px2rem": "^0.3.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-cube-ui": "^0.2.4",
     "vue-template-compiler": "^2.5.17"
+  },
+  "transformModules": {
+    "cube-ui": {
+      "transform": "cube-ui/src/modules/${member}",
+      "kebabCase": true
+    }
   }
 }
