--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "css-ripple-effect": "^1.0.5",
     "cube-ui": "^1.12.5",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
