--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 node_modules
 /dist
 
+
 # local env files
 .env.local
 .env.*.local
@@ -14,8 +15,7 @@ yarn-error.log*
 # Editor directories and files
 .idea
 .vscode
-package.json
-package-lock.json
+*json
 *.suo
 *.ntvs*
 *.njsproj
