--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue": "^2.5.17",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-jsonp":"^0.1.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
